Build for Java 1.8